--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,7 +14,7 @@
         <img src="https://i.imgur.com/mZFbtfY.png" alt="Logo">
       </div>
 
-      <!-- Navigation links -->
+
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -35,7 +35,7 @@
       </div>
       <div class="author-details">
     <h1>Marcques Jesreel V. Leonor</h1>
-    <p>Observant Network Programmer</p>
+    <p>Observant IT Researcher</p>
     <p>Hey there! I'm Marcques, an IT student currently in my third year of studies. Tech has always been my passion, and I've been honing my skills in various programming languages and technologies.</p> 
     <p>When it comes to coding, I'm quite versatile. Java is like a second language to me, and I'm equally comfortable working with Python, C/C++, and Bash/Shell scripting. But that's not all – I've also got a good grasp of SQL for database management and can whip up some web pages with HTML/CSS and JavaScript.</p>
     <p>Aside from my tech skills, I'm a bit of a Renaissance man. I love exploring the depths of science, psychology, and philosophy. While I consider myself a realist at heart, I don't completely dismiss the idea of idealism – I just prefer to keep my feet firmly planted in facts and evidence.</p> 
