--- a/Portfolio.html
+++ b/Portfolio.html
@@ -88,7 +88,7 @@ As we forge ahead into the digital frontier, let us embrace a shared responsibil
       <section id="video">
         <h2>Video Resume</h2>
         <div class="video-container">
-          <iframe width="560" height="315" src="https://youtu.be/JFbRgZoc208" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/JFbRgZoc208" frameborder="0" allowfullscreen></iframe>
         </div>
       </section>
 
